force-app/main/default/src/objects/PJN_AE_Primary_Source__c/PJN_AE_Primary_Source__c.object-meta.xml
<CustomObject>
    <label>AE Primary Source</label>
    <nameField>
        <displayFormat>AE-R-{00000000}</displayFormat>
        <label>AE Reporter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Primary Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>