force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Address_Street__c.field-meta.xml
<CustomField>
    <fullName>PJN_Address_Street__c</fullName>
    <description>E2B (R2): A.2.1.2c, reporterstreet (100AN)

E2B (R3): C.2.r.2.3 Reporter’s Street
User Guidance: This data element captures the reporter&apos;s street name.
Conformance: Optional
Data Type: 100AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s street name.</inlineHelpText>
    <label>Address Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>