force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Adverse_Event__c.field-meta.xml
<CustomField>
    <fullName>PJN_Adverse_Event__c</fullName>
    <description>The parent AE record that the contact is related to.</description>
    <inlineHelpText>The parent AE record that the contact is related to.</inlineHelpText>
    <label>Adverse Event</label>
    <referenceTo>PJN_Adverse_Event__c</referenceTo>
    <relationshipLabel>AE Primary Sources</relationshipLabel>
    <relationshipName>PJN_AE_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>