force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_City__c.field-meta.xml
<CustomField>
    <fullName>PJN_City__c</fullName>
    <description>E2B: A.2.1.2d, reportercity (35AN)

E2B (R3): C.2.r.2.4 Reporter’s City
User Guidance: This data element captures the reporter&apos;s city name.
Conformance: Optional
Data Type: 35AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s city name.</inlineHelpText>
    <label>City</label>
    <length>35</length>
    <type>Text</type>
</CustomField>