force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Department__c.field-meta.xml
<CustomField>
    <fullName>PJN_Department__c</fullName>
    <description>E2B (R2): A.2.1.2b, reporterdepartment (60AN)

E2B (R3): C.2.r.2.2 Reporter’s Department
User Guidance: This data element captures the reporter&apos;s department name.
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s department name.</inlineHelpText>
    <label>Department</label>
    <length>60</length>
    <type>Text</type>
</CustomField>