force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_First_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_First_Name__c</fullName>
    <description>E2B (R2): A.2.1.1b, reportergivenname (35AN)

E2B (R3): C.2.r.1.2 Reporter’s Given Name
User Guidance: This data element captures the reporter&apos;s given name.
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s given name.</inlineHelpText>
    <label>First Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>