force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Last_Name__c</fullName>
    <description>E2B (R2): A.2.1.1d, reporterfamilyname (50AN)

E2B (R3): C.2.r.1.4 Reporter’s Family Name
User Guidance This data element captures the reporter&apos;s family name.
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance This data element captures the reporter&apos;s family name.</inlineHelpText>
    <label>Last Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>