force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Literature_References__c.field-meta.xml
<CustomField>
    <fullName>PJN_Literature_References__c</fullName>
    <description>E2B (R2): A.2.2, literaturereference (500AN)

E2B (R3): C.4.4.1 Literature Reference(s)
Conformance: Optional
Data Type: 500AN
OID: None
Value Allowed:
Free text
nullFlavor: ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Literature References</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>