force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Middle_Name__c</fullName>
    <description>E2B (R2): A.2.1.1c, reportermiddlename (15AN)

E2B (R3): C.2.r.1.3 Reporter’s Middle Name
User Guidance: This data element captures the reporter&apos;s middle name.
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK
Entity Name: given (same as first name, the entity name is repeated and the second one is middle)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s middle name.</inlineHelpText>
    <label>Middle Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>