force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Organization__c.field-meta.xml
<CustomField>
    <fullName>PJN_Organization__c</fullName>
    <description>E2B (R2): A.2.1.2a, reporterorganization (60AN)

E2B (R3): C.2.r.2.1 Reporter’s Organisation
User Guidance: This data element captures the reporter&apos;s organisation’s name.
Conformance: Optional
Data Type: 60AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK
Entity Name: name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s organization’s name.</inlineHelpText>
    <label>Organization</label>
    <length>60</length>
    <type>Text</type>
</CustomField>