force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Postal_Code__c</fullName>
    <description>E2B (R2): A.2.1.2f, reporterpostcode (15AN)

E2B (R3): C.2.r.2.6 Reporter’s Postcode
User Guidance: This data element captures the reporter&apos;s postcode.
Conformance: Optional
Data Type: 15AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s postcode.</inlineHelpText>
    <label>Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>