force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Qualification__c.field-meta.xml
<CustomField>
    <fullName>PJN_Qualification__c</fullName>
    <description>E2B (R2): A.2.1.4, qualification (1N)

E2B (R3): C.2.r.4 Qualification
User Guidance: This data element captures the reporter qualification.
Conformance: Optional, but required if C.2.r.5 = 1.
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.6
Value Allowed: 1=Physician, 2=Pharmacist, 3=Other health professional, 4=Lawyer, 5=Consumer or other non health professional, nullFlavor: UNK</description>
    <inlineHelpText>User Guidance This data element captures the reporter qualification.</inlineHelpText>
    <label>Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>