force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Sponsor_Study_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Sponsor_Study_Number__c</fullName>
    <description>E2B (R2): A.2.3.2, sponsorstudynumb (35AN)

E2B (R3): Moved to C.5.3 (AE Object)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sponsor Study Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>