force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_State__c.field-meta.xml
<CustomField>
    <fullName>PJN_State__c</fullName>
    <description>E2B (R2): A.2.1.2e, reporterstate (40AN)

E2B (R3): C.2.r.2.5 Reporter’s State or Province
User Guidance: This data element captures the reporter&apos;s State or Province.
Conformance: Optional
Data Type: 40AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s State or Province.</inlineHelpText>
    <label>State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>