force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Study_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Study_Name__c</fullName>
    <description>E2B (R2): A.2.3.1, studyname (100AN)

E2B (R3): Moved to C.5.2 (AE Object)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Study Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>