force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Study_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Study_Type__c</fullName>
    <description>E2B (R2): A.2.3.3, observestudytype (1N)

E2B (R3): Moved to C.5.4 (AE Object)</description>
    <label>Study Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>