force-app/main/default/src/objects/PJN_AE_Primary_Source__c/fields/PJN_Title__c.field-meta.xml
<CustomField>
    <fullName>PJN_Title__c</fullName>
    <description>E2B (R2): A.2.1.1a, reportertitle (50AN)

E2B (R3): C.2.r.1.1 Reporter’s Title
User Guidance: This data element captures the reporter&apos;s title.
Conformance: Optional
Data Type: 50AN
OID: None
Value Allowed: Free text, nullFlavor: MSK, ASKU, NASK, UNK
Entity Name: prefix</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the reporter&apos;s title.</inlineHelpText>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>