force-app/main/default/src/objects/PJN_AE_Primary_Source__c/recordTypes/PJN_AE_Reporter.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Reporter</fullName>
    <active>true</active>
    <label>AE Reporter</label>
</RecordType>