force-app/main/default/src/objects/PJN_AE_Primary_Source__c/recordTypes/PJN_AE_Reporter_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Reporter_Closed</fullName>
    <active>true</active>
    <label>AE Reporter - Closed</label>
</RecordType>